# GOLIATH

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: interface.py
core/: engine.py
integrations/: __init__.py
models/: __init__.py  claude.py  gemini.py  grok.py  openai_provider.py
src/goliath/: __init__.py  config.py  main.py
src/goliath/cli/: interface.py
src/goliath/core/: engine.py  moderation.py
src/goliath/integrations/: airtable.py  algolia.py  alpaca.py  alpha_vantage.py  asana.py  beehiiv.py  binance.py  brave_search.py  calendar.py  calendly.py  canva.py  clickup.py  cloudflare.py  coinbase.py  coingecko.py  contentful.py  convertkit.py  datadog.py  discord.py  docs.py  drive.py  dropbox.py  etherscan.py  figma.py  firebase.py  github.py  gmail.py  google_maps.py  hubspot.py  imagegen.py  instagram.py  intercom.py  jira.py  kraken.py  linear.py  linkedin.py  loom.py  mailchimp.py  medium.py  mixpanel.py  (+49 more)
src/goliath/memory/: __init__.py  store.py
src/goliath/models/: base.py  claude.py  cohere.py  deepseek.py  gemini.py  grok.py  mistral.py  ollama.py  openai_provider.py  perplexity.py
tests/: test_batch2_integrations.py  test_batch3_integrations.py  test_batch4_integrations.py  test_batch5_integrations.py  test_google_integrations.py  test_moderation.py  test_new_integrations.py  test_other_integrations.py  test_social_integrations.py
tools/: __init__.py
